--- a/index.html
+++ b/index.html
@@ -10,13 +10,14 @@
 
 <body>
     <div class="gameboard">
-        <div id="celeste" class="color celeste left" data-color="celeste"></div>
-        <div id="violeta" class="color violeta right" data-color="violeta"></div>
-        <div id="naranja" class="color naranja left" data-color="naranja"></div>
-        <div id="verde" class="color verde right" data-color="verde"></div>
+        <div id="celeste" class="color celeste left" data-color="blueGreen"></div>
+        <div id="violeta" class="color violeta right" data-color="purple"></div>
+        <div id="naranja" class="color naranja left" data-color="orange"></div>
+        <div id="verde" class="color verde right" data-color="green"></div>
         <button id="btnEmpezar" class="btn-start">Empezar a jugar!</button>
     </div>
 
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
     <script src="js/app.js"></script>
 </body>
 
